--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.8",
     "express": "^4.18.3",
+    "mobx": "^6.12.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
